2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* include/functions_reporting.php: Return false if no data were found
	on get_agentmodule_sla(). Fixes #2777541

	* operation/reporting/reporting_viewer.php: Style correction.

2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* godmode/modules/manage_network_templates_form.php: Applied
	Zdenek Janda's patch. Fixes #2802589

2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* operation/agentes/networkmap.php: Avoids a warning when no nodes
	were found on generate_dot(). Shows a message when no nodes were
	found. Fixes #2786516. 

	* operation/menu.php: Changed label of network maps.

2009-06-09  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/pandora_modules.js: Fixed variable name.

2009-06-09  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/agent_manager.php: Fixed string filter when
	searching agents. Avoids a PHP notice when none found

	* godmode/agentes/configurar_agente.php: Solved a mess with variable
	names.

	* godmode/agentes/module_manager_editor_prediction.php: Improved
	the prediction module selection, adding a filter for agents and
	module. Fixes #2707907

	* include/javascript/jquery.pandora.controls.js: Returns
	whenever callbackBefore returns false.

	* include/javascript/pandora_modules.js: Check for module selection
	when creating a prediction one.

	* include/styles/pandora.css: Added style to prediction module
	selection.

	* godmode/alerts/alert_list.php: callbackBefore on pandora.controls
	elements must return true now.

	* godmode/agentes/module_manager_editor_common.php: Added moduletype
	hidden input to be used in javascript.

	* godmode/agentes/module_manager_editor.php: Use pandora.controls and
	added a string for javascript.

2009-06-09  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed a couple of typo
	errors when adding a SLA report.

2009-06-09  Esteban Sanchez  <estebans@artica.es>
