@@ -1,5 +1,10 @@
 2009-06-10  Esteban Sanchez  <estebans@artica.es>
 
+	* operation/events/events.php: Removed all events on select elements.
+	Fixes #2797203.
+
+2009-06-10  Esteban Sanchez  <estebans@artica.es>
+
 	* include/functions_reporting.php: Return false if no data were found
 	on get_agentmodule_sla(). Fixes #2777541
 
